# lamlt

./: .ocamlinit  LICENSE  Makefile  README.md  dune-project  lcaml.opam
bench/: bench.ml  dune
docs/: Efficient and Insightful Generalization.html  links.md
lib/: .algorithm_w.ml.swp  .lambda.ml.swp  README.md  algorithm_w.ml  algorithm_w.mli  church.ml  church.mli  dune  lambda.ml  lambda.mli  parser.ml  parser.mli  type_checker.ml  type_checker.mli  types.ml  types.mli
resources/: README.md
test/: dune  test_lcaml.ml
