(lang dune 3.17)

(name lcaml)

(generate_opam_files true)

(source
 (github MustafaAamir/lcaml))

(authors "Yusuf Sabuwalah <author@gmail.com>" "Mustafa Aamir <mustafa.290101@gmail.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lcaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml ocamlformat)
 (tags
  ("Lambda Calculus Automated Theorem Proving Logic Church" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
